<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ListView
        android:id="@+id/itemList"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/controls" />

    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/controlDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/controlPrev"
            android:contentDescription="@string/browse_button_devices"
            android:src="@drawable/device_48_48" />

        <ImageButton
            android:id="@+id/controlPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/controlStop"
            android:contentDescription="@string/browse_button_prev"
            android:src="@drawable/player_play" />

        <ImageButton
            android:id="@+id/controlStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/browse_button_stop"
            android:src="@drawable/player_stop" />

        <ImageButton
            android:id="@+id/controlNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/controlStop"
            android:contentDescription="@string/browse_button_next"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/controlReceiverDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/controlNext"
            android:contentDescription="@string/browse_button_devices"
            android:src="@drawable/laptop_48_48" />

    </RelativeLayout>

</RelativeLayout>